--- a/src/app/sistema/components/egresos/egresos.component.html
+++ b/src/app/sistema/components/egresos/egresos.component.html
@@ -281,7 +281,7 @@
             <div class="col-12 col-md-4">
                 <p-divider align="center" type="solid" class="m-0 p-0" [style]="{'margin': '0px'}"
                     (click)="buscarEstablecimientos(true)">
-                    <b>Origen</b>
+                    <b>Destino</b>
                 </p-divider>
                 <div class="input-group m-1 p-0">
                     <span class="input-group-text m-0 p-0 px-2" id="basic-addon1">Desc.</span>
@@ -509,7 +509,7 @@
     [breakpoints]="{ '1199px': '75vw', '575px': '90vw' }" [maximizable]="true" [closeOnEscape]="devolucion.id != ''">
 
     <!-- HEADERS -->
-    <div class="row py-2" style="background-color: rgba(255, 183, 183, 0.555); border-radius: 6px;">
+    <div class="row py-2" style="background-color: rgba(255, 241, 114, 0.616); border-radius: 6px;">
         <div class="col-6 col-md-3 mb-2 mb-md-0">
             <div class="input-group">
                 <span class="input-group-text" id="basic-addon1">Modelo</span>
