--- a/src/app/sistema/components/stock/stock.component.html
+++ b/src/app/sistema/components/stock/stock.component.html
@@ -8,7 +8,7 @@
     </div>
     } @else {
 
-    <h1 class="text-center">{{id_cliente ? '' : 'RESUMEN GENERAL DE STOCK'}}</h1>
+    <h1 class="text-center">{{id_cliente ? 'RESUMEN GENERAL DE STOCK: ' + cliente : 'RESUMEN GENERAL DE STOCK'}}</h1>
 
     <div class="table-responsive">
         <table class="table table-striped table-hover table-sm table-bordered">
