--- a/src/app/sistema/components/stock/stock.component.html
+++ b/src/app/sistema/components/stock/stock.component.html
@@ -75,5 +75,56 @@
             </tbody>
         </table>
     </div>
+
+    <br><br>
+
+    <div class="form-check">
+        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" [(ngModel)]="value_um" value="um">
+        <label class="form-check-label" for="flexRadioDefault1">
+            Usar U.M.
+        </label>
+    </div>
+    <div class="form-check">
+        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" [(ngModel)]="value_um" value="umf">
+        <label class="form-check-label" for="flexRadioDefault2">
+            Usar U.M.F.
+        </label>
+    </div>
+
+    <div class="table-responsive">
+        <table class="table table-striped table-hover table-sm table-bordered">
+            <thead>
+                <tr>
+                    <th class="text-center align-middle" scope="col" rowspan="2">Cód</th>
+                    <th class="text-center align-middle" scope="col" rowspan="2">ARTICULO</th>
+                    <th class="text-center align-middle" scope="col" colspan="2">INGRESOS</th>
+                    <th class="text-center align-middle" scope="col" colspan="2">SALIDAS</th>
+                    <th class="text-center align-middle" scope="col" colspan="2">STOCK</th>
+                </tr>
+                <tr>
+                    <th class="text-center align-middle" scope="col">Cant</th>
+                    <th class="text-center align-middle" scope="col">U.M.</th>
+                    <th class="text-center align-middle" scope="col">Cant</th>
+                    <th class="text-center align-middle" scope="col">U.M.</th>
+                    <th class="text-center align-middle" scope="col">Cant</th>
+                    <th class="text-center align-middle" scope="col">U.M.</th>
+                </tr>
+            </thead>
+            <tbody>
+                @for (item of dataTabla; track $index) {
+                <tr>
+                    <td scope="row">{{item.codigo}}</td>
+                    <td>{{item.descripcion}}</td>
+                    <td class="text-end">{{value_um == 'um' ? mostrarNumero(item.entradas) : mostrarNumero(item.entradas_uf)}}</td>
+                    <td class="text-start">{{item[value_um]}}</td>
+                    <td class="text-end">{{value_um == 'um' ? mostrarNumero(item.salidas) : mostrarNumero(item.salidas_uf)}}</td>
+                    <td class="text-start">{{item[value_um]}}</td>
+                    <td class="text-end">{{value_um == 'um' ? mostrarNumero(item.stock) : mostrarNumero(item.stock_uf)}}</td>
+                    <td class="text-start">{{item[value_um]}}</td>
+                </tr>
+                }
+            </tbody>
+        </table>
+    </div>
     }
 </div>
