--- a/src/app/sistema/components/stock/stock.component.html
+++ b/src/app/sistema/components/stock/stock.component.html
@@ -8,75 +8,23 @@
     </div>
     } @else {
 
-    <h1 class="text-center">{{id_cliente ? 'RESUMEN GENERAL DE STOCK: ' + cliente : 'RESUMEN GENERAL DE STOCK'}}</h1>
+    <h1 class="text-center">RESUMEN GENERAL DE STOCK</h1>
 
-    <div class="table-responsive">
-        <table class="table table-striped table-hover table-sm table-bordered">
-            <thead>
-                <tr>
-                    <th class="text-center align-middle" scope="col" rowspan="2">ARTICULO</th>
-                    <th class="text-center align-middle" scope="col" rowspan="2">ANT</th>
-                    <th class="text-center align-middle" scope="col" colspan="2">INGRESOS</th>
-                    <th class="text-center align-middle" scope="col" colspan="2">SALIDAS</th>
-                    <th class="text-center align-middle" scope="col" colspan="2">OPERACIONES</th>
-                    <th class="text-center align-middle" scope="col" rowspan="2">STOCK OFICIAL</th>
-                    <th class="text-center align-middle" scope="col" rowspan="2">OTROS RETIROS</th>
-                    <th class="text-center align-middle" scope="col" rowspan="2">STOCK REAL</th>
-                </tr>
-                <tr>
-                    <th class="text-center align-middle" scope="col">REMITOS</th>
-                    <th class="text-center align-middle" scope="col">DEVOLUCIONES</th>
-                    <th class="text-center align-middle" scope="col">REMITOS</th>
-                    <th class="text-center align-middle" scope="col">DEVOLUCIONES</th>
-                    <th class="text-center align-middle" scope="col">REMITOS</th>
-                    <th class="text-center align-middle" scope="col">DEVOLUCIONES</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td scope="row">#</td>
-                    <td>#</td>
-                    <td>#</td>
-                    <td>#</td>
-                    <td>#</td>
-                    <td>#</td>
-                    <td>#</td>
-                    <td>#</td>
-                    <td>#</td>
-                    <td>#</td>
-                    <td>#</td>
-                </tr>
-                <tr>
-                    <td scope="row">#</td>
-                    <td>#</td>
-                    <td>#</td>
-                    <td>#</td>
-                    <td>#</td>
-                    <td>#</td>
-                    <td>#</td>
-                    <td>#</td>
-                    <td>#</td>
-                    <td>#</td>
-                    <td>#</td>
-                </tr>
-                <tr>
-                    <td scope="row">#</td>
-                    <td>#</td>
-                    <td>#</td>
-                    <td>#</td>
-                    <td>#</td>
-                    <td>#</td>
-                    <td>#</td>
-                    <td>#</td>
-                    <td>#</td>
-                    <td>#</td>
-                    <td>#</td>
-                </tr>
-            </tbody>
-        </table>
+    <div class="row">
+        <div class="col-12 col-md-5">
+            <button type="button" class="btn btn-primary m-2" (click)="visible_filtros = true">FILTROS</button>
+        </div>
+        <!--div class="col-12 col-md-7 text-md-end">
+            <button type="button" class="btn btn-primary m-2" (click)="listadoXLSX()"><i
+                    class="pi pi-file-excel me-2"></i>LISTADO</button>
+            <button type="button" class="btn btn-primary m-2" (click)="detalleXLSX()"><i
+                    class="pi pi-file-excel me-2"></i>REPORTE</button>
+            <button type="button" class="btn btn-primary m-2" (click)="datosXLSX()"><i
+                    class="pi pi-file-excel me-2"></i>DATOS</button>
+            <button type="button" class="btn btn-primary m-2" (click)="totalesArticulosIngreso()">NUEVA DEVOLUCION DE
+                    MERCADERIA</button>
+        </div-->
     </div>
-
-    <br><br>
 
     <div class="form-check">
         <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" [(ngModel)]="value_um" value="um">
@@ -97,30 +45,35 @@
                 <tr>
                     <th class="text-center align-middle" scope="col" rowspan="2">Cód</th>
                     <th class="text-center align-middle" scope="col" rowspan="2">ARTICULO</th>
+                    <th class="text-center align-middle" scope="col" rowspan="2">U.M.</th>
                     <th class="text-center align-middle" scope="col" colspan="2">INGRESOS</th>
                     <th class="text-center align-middle" scope="col" colspan="2">SALIDAS</th>
-                    <th class="text-center align-middle" scope="col" colspan="2">STOCK</th>
+                    <th class="text-center align-middle" scope="col" colspan="2">OPERACIONES</th>
+                    <th class="text-center align-middle" scope="col" rowspan="2">STOCK</th>
                 </tr>
                 <tr>
-                    <th class="text-center align-middle" scope="col">Cant</th>
-                    <th class="text-center align-middle" scope="col">U.M.</th>
-                    <th class="text-center align-middle" scope="col">Cant</th>
-                    <th class="text-center align-middle" scope="col">U.M.</th>
-                    <th class="text-center align-middle" scope="col">Cant</th>
-                    <th class="text-center align-middle" scope="col">U.M.</th>
+                    <th class="text-center align-middle" scope="col">INGRESOS</th>
+                    <th class="text-center align-middle" scope="col">DEVOLUCIONES</th>
+                    <th class="text-center align-middle" scope="col">REMITOS</th>
+                    <th class="text-center align-middle" scope="col">DEVOLUCIONES</th>
+                    <th class="text-center align-middle" scope="col">ENTRADAS</th>
+                    <th class="text-center align-middle" scope="col">SALIDAS</th>
                 </tr>
             </thead>
             <tbody>
                 @for (item of dataTabla; track $index) {
                 <tr>
                     <td scope="row">{{item.codigo}}</td>
-                    <td>{{item.descripcion}}</td>
-                    <td class="text-end">{{value_um == 'um' ? mostrarNumero(item.entradas) : mostrarNumero(item.entradas_uf)}}</td>
-                    <td class="text-start">{{item[value_um]}}</td>
-                    <td class="text-end">{{value_um == 'um' ? mostrarNumero(item.salidas) : mostrarNumero(item.salidas_uf)}}</td>
-                    <td class="text-start">{{item[value_um]}}</td>
-                    <td class="text-end">{{value_um == 'um' ? mostrarNumero(item.stock) : mostrarNumero(item.stock_uf)}}</td>
-                    <td class="text-start">{{item[value_um]}}</td>
+                    <td class="text-nowrap">{{item.descripcion}}</td>
+                    <th class="text-start">{{item[value_um].toLocaleUpperCase()}}</th>
+
+                    <td class="text-end">{{value_um == 'um' ? mostrarNumero(item.ingresos) : mostrarNumero(item.ingresos_uf)}}</td>
+                    <td class="text-end">{{value_um == 'um' ? mostrarNumero(item.ingresos_devoluciones) : mostrarNumero(item.ingresos_devoluciones_uf)}}</td>
+                    <td class="text-end">{{value_um == 'um' ? mostrarNumero(item.remitos) : mostrarNumero(item.remitos_uf)}}</td>
+                    <td class="text-end">{{value_um == 'um' ? mostrarNumero(item.remitos_devoluciones) : mostrarNumero(item.remitos_devoluciones_uf)}}</td>
+                    <td class="text-end">{{value_um == 'um' ? mostrarNumero(item.operaciones_entradas) : mostrarNumero(item.operaciones_entradas_uf)}}</td>
+                    <td class="text-end">{{value_um == 'um' ? mostrarNumero(item.operaciones_salidas) : mostrarNumero(item.operaciones_salidas_uf)}}</td>
+                    <th class="text-end">{{value_um == 'um' ? mostrarNumero(item.stock) : mostrarNumero(item.stock_uf)}}</th>
                 </tr>
                 }
             </tbody>
@@ -128,3 +81,177 @@
     </div>
     }
 </div>
+
+
+<p-dialog header="FILTRAR" [modal]="true" [(visible)]="visible_filtros" [style]="{ width: '90rem', height:'90rem', 'max-width': '700px'}"
+    [breakpoints]="{ '1199px': '75vw', '575px': '90vw' }">
+
+    <div class="row py-2">
+        <div class="col-12">
+            <p-divider align="left" type="solid" class="m-0 p-0" [style]="{'margin': '5px 0px'}">
+                <b>Fecha:</b>
+            </p-divider>
+
+            <div class="row my-2">
+                <div class="col mb-2">
+                    <div class="input-group">
+                        <span class="input-group-text" id="basic-addon1">DESDE</span>
+                        <input type="date" class="form-control" placeholder="FECHA" aria-label="FECHA"
+                            aria-describedby="basic-addon1" [(ngModel)]="fechaFiltroDesde">
+                    </div>
+                </div>
+                <div class="col mb-2">
+                    <div class="input-group">
+                        <span class="input-group-text" id="basic-addon1">HASTA</span>
+                        <input type="date" class="form-control" placeholder="FECHA" aria-label="FECHA"
+                            aria-describedby="basic-addon1" [(ngModel)]="fechaFiltroHasta">
+                    </div>
+                </div>
+            </div>
+
+            <div class="row my-2">
+                <div class="col text-center">
+                    <div class="btn-group" role="group" aria-label="Basic example">
+                        <button type="button" class="btn btn-outline-primary" (click)="fechaFiltro(0)">HOY</button>
+                        <button type="button" class="btn btn-outline-primary" (click)="fechaFiltro(7)">ULTIMA
+                            SEMANA</button>
+                        <button type="button" class="btn btn-outline-primary" (click)="fechaFiltro(31)">ULTIMO
+                            MES</button>
+                        <button type="button" class="btn btn-outline-primary" (click)="fechaFiltro(365)">ULTIMO
+                            AÑO</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 mt-5">
+            <p-divider align="left" type="solid" class="m-0 p-0" [style]="{'margin': '5px 0px'}">
+                <b>CLIENTES</b>
+            </p-divider>
+
+            <div class="input-group mb-3">
+                <span class="input-group-text" id="basic-addon1" style="width: 15%;">Buscar</span>
+                <input type="text" class="form-control" placeholder="Alias / Razon Social"
+                    aria-label="Alias / Razon Social" aria-describedby="basic-addon1" [(ngModel)]="searchValue_cliente"
+                    (change)="clienteFiltro()" (keyup)="clienteFiltro()">
+            </div>
+            <div class="form-group">
+                <select id="clientes" class="form-control" multiple [(ngModel)]="selectedClientes"
+                    style="height: 150px;">
+                    @for (item of clientesFiltrados; track $index) {
+                    <option value="{{item.id}}">{{item.alias}} ({{item.razon_social}})</option>
+                    }
+                </select>
+            </div>
+        </div>
+        <div class="col-12 mt-5">
+            <p-divider align="left" type="solid" class="m-0 p-0" [style]="{'margin': '5px 0px'}">
+                <b>DEPOSITOS</b>
+            </p-divider>
+
+            <div class="input-group mb-3">
+                <span class="input-group-text" id="basic-addon1" style="width: 15%;">Buscar</span>
+                <input type="text" class="form-control" placeholder="Deposito"
+                    aria-label="Deposito" aria-describedby="basic-addon1" [(ngModel)]="searchValue_deposito"
+                    (change)="depositoFiltro()" (keyup)="depositoFiltro()">
+            </div>
+            <div class="form-group">
+                <select id="depositos" class="form-control" multiple [(ngModel)]="selectedDepositos"
+                    style="height: 150px;">
+                    @for (item of depositosFiltrados; track $index) {
+                    <option value="{{item.id}}">{{item.descripcion}} ({{item.alias}})</option>
+                    }
+                </select>
+            </div>
+        </div>
+        <div class="col-12 mt-5">
+            <p-divider align="left" type="solid" class="m-0 p-0" [style]="{'margin': '5px 0px'}">
+                <b>ARTICULOS</b>
+            </p-divider>
+
+            <div class="input-group mb-3">
+                <span class="input-group-text" id="basic-addon1" style="width: 15%;">Buscar</span>
+                <input type="text" class="form-control" placeholder="Articulos"
+                    aria-label="Articulos" aria-describedby="basic-addon1" [(ngModel)]="searchValue_articulo"
+                    (change)="articuloFiltro()" (keyup)="articuloFiltro()">
+            </div>
+            <div class="form-group">
+                <select id="articulos" class="form-control" multiple [(ngModel)]="selectedArticulos"
+                    style="height: 150px;">
+                    @for (item of articulosFiltrados; track $index) {
+                    <option value="{{item.id}}">{{item.descripcion}} ({{item.codigo}})</option>
+                    }
+                </select>
+            </div>
+        </div>
+        <div class="col-12 mt-5">
+            <p-divider align="left" type="solid" class="m-0 p-0" [style]="{'margin': '5px 0px'}">
+                <b>RUBRO</b>
+            </p-divider>
+
+            <div class="input-group mb-3">
+                <span class="input-group-text" id="basic-addon1" style="width: 15%;">Buscar</span>
+                <input type="text" class="form-control" placeholder="Rubro"
+                    aria-label="Rubro" aria-describedby="basic-addon1" [(ngModel)]="searchValue_rubro"
+                    (change)="rubroFiltro()" (keyup)="rubroFiltro()">
+            </div>
+            <div class="form-group">
+                <select id="rubros" class="form-control" multiple [(ngModel)]="selectedRubros"
+                    style="height: 150px;">
+                    @for (item of rubrosFiltrados; track $index) {
+                    <option value="{{item.id}}">{{item.descripcion}} ({{item.alias}})</option>
+                    }
+                </select>
+            </div>
+        </div>
+        <div class="col-12 mt-5">
+            <p-divider align="left" type="solid" class="m-0 p-0" [style]="{'margin': '5px 0px'}">
+                <b>SUBRUBRO</b>
+            </p-divider>
+
+            <div class="input-group mb-3">
+                <span class="input-group-text" id="basic-addon1" style="width: 15%;">Buscar</span>
+                <input type="text" class="form-control" placeholder="SubRubro"
+                    aria-label="SubRubro" aria-describedby="basic-addon1" [(ngModel)]="searchValue_subRubro"
+                    (change)="subRubroFiltro()" (keyup)="subRubroFiltro()">
+            </div>
+            <div class="form-group">
+                <select id="subRubros" class="form-control" multiple [(ngModel)]="selectedSubRubros"
+                    style="height: 150px;">
+                    @for (item of subRubrosFiltrados; track $index) {
+                    <option value="{{item.id}}">{{item.descripcion}} ({{item.alias}})</option>
+                    }
+                </select>
+            </div>
+        </div>
+        <div class="col-12 mt-5">
+            <p-divider align="left" type="solid" class="m-0 p-0" [style]="{'margin': '5px 0px'}">
+                <b>LABORATORIO</b>
+            </p-divider>
+
+            <div class="input-group mb-3">
+                <span class="input-group-text" id="basic-addon1" style="width: 15%;">Buscar</span>
+                <input type="text" class="form-control" placeholder="Laboratorio"
+                    aria-label="Laboratorio" aria-describedby="basic-addon1" [(ngModel)]="searchValue_laboratorio"
+                    (change)="laboratorioFiltro()" (keyup)="laboratorioFiltro()">
+            </div>
+            <div class="form-group">
+                <select id="laboratorios" class="form-control" multiple [(ngModel)]="selectedLaboratorios"
+                    style="height: 150px;">
+                    @for (item of laboratoriosFiltrados; track $index) {
+                    <option value="{{item.id}}">{{item.descripcion}} ({{item.alias}})</option>
+                    }
+                </select>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col text-end">
+            <button type="button" class="btn btn-info m-2" (click)="guardarFechas()">GUARDAR FECHAS</button>
+
+            <button type="button" class="btn btn-warning m-2" (click)="visible_filtros = false">CERRAR</button>
+
+            <button type="button" class="btn btn-success m-2" (click)="filtrar()">APLICAR</button>
+        </div>
+    </div>
+</p-dialog>
